Overflow-x further fixes

--- a/style.css
+++ b/style.css
@@ -616,8 +616,8 @@ footer {
 }
 
 @media (max-width: 428px) {
-    body {
-        overflow-x:hidden;
+    * {
+        overflow-x: hidden;
     }
     /* hero */
     .hero {
@@ -678,6 +678,10 @@ footer {
     .more-features {
         padding: 0.5em 5px;
         grid-gap: 1.5em;
+    }
+
+    .more-feature {
+        padding: 10px;
     }
     
     .more-feature img {
